--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -55,20 +55,19 @@
         android:layout_height="wrap_content"
         android:src="@drawable/three_dots_background_white"
 		android:background="@null" 
-        android:layout_toRightOf="@id/file_list_updated"
         android:layout_alignTop="@id/file_list_filename"
         android:layout_alignParentRight="true"
 		android:paddingTop="25dp"
-        android:paddingLeft="5dp" />
+        android:paddingRight="15dp" />
     
     <ImageView
         android:id="@+id/file_list_arrow_selection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/arrow_selection"
-        android:layout_toRightOf="@id/file_list_updated"
 		android:layout_alignBottom="@id/file_list_thumbnail"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:paddingRight="15dp" />
     
     <RelativeLayout
         android:id="@+id/file_list_options"
