--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -20,10 +20,10 @@
 -->
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_logout"
         android:orderInCategory="105"
         android:showAsAction="always"
-        android:title="@string/action_settings"
+        android:title="@string/action_logout"
         android:icon="@drawable/ic_launcher"
         MEGA:showAsAction="ifRoom"
         />
