--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -18,7 +18,8 @@
             android:orientation="vertical"
             android:paddingBottom="40dp"
             android:paddingTop="40dp" 
-            android:background="@color/background" >
+            android:background="@color/background"
+            android:id="@+id/login_login_layout" >
 	
 		    <TextView
 		        android:id="@+id/loginTextView"
@@ -116,13 +117,14 @@
 		
 		</LinearLayout>
 		
-	    <include layout="@layout/delimiter" />
+	    <include layout="@layout/delimiter" 
+	        android:id="@+id/login_delimiter" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            
+            android:id="@+id/login_create_account_layout"
             android:gravity="center_horizontal"
             >
             
@@ -144,6 +146,51 @@
             </Button>
             
         </LinearLayout>
+        
+        <LinearLayout
+		    android:id="@+id/login_logging_in_layout"
+		    android:layout_width="fill_parent"
+		    android:layout_height="fill_parent"
+		    android:orientation="vertical"
+		    android:gravity="center_horizontal|center_vertical" >
+        
+	    <ImageView 
+	        android:id="@+id/login_mega_logo"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:src="@drawable/login_mega_logo"
+	        android:layout_marginTop="100dp"/>
+	    
+	    <TextView
+	        android:id="@+id/login_generating_keys_text"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/login_generating_key"
+	        android:layout_marginTop="30dp" />
+	    
+	    <TextView
+	        android:id="@+id/login_logging_in_text"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/login_connecting_to_server" 
+	        android:layout_marginTop="5dp"/>
+	    
+	    <TextView
+	        android:id="@+id/login_fetch_nodes_text"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/download_updating_filelist"
+	        android:layout_marginTop="5dp" />
+	    
+	    <ProgressBar
+	        android:id="@+id/login_progress_bar"
+	        style="?android:attr/progressBarStyleLargeInverse"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"
+	        android:layout_marginTop="30dp" />
+	    
+	</LinearLayout>
 	
 	</LinearLayout>
 	
