--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -13,10 +13,10 @@
     
     <TextView
         android:id="@+id/file_list_filename"
-        android:layout_width="fill_parent"
+        android:layout_width="225dp"
         android:layout_height="30dp"
         android:layout_toRightOf="@id/file_list_thumbnail"
-        android:paddingLeft="5dp"
+        android:paddingLeft="3dp"
         android:paddingTop="7dp" />
     
     <TextView
@@ -25,7 +25,7 @@
         android:layout_height="30dp"
         android:layout_toRightOf="@id/file_list_thumbnail"
         android:layout_below="@+id/file_list_filename"
-        android:paddingLeft="5dp"
+        android:paddingLeft="3dp"
         android:paddingBottom="7dp"
         android:textColor="@color/file_list_second_row" />
     
@@ -37,7 +37,7 @@
         android:layout_toRightOf="@id/file_list_filesize"
         android:layout_alignTop="@id/file_list_filesize"
         android:paddingTop="7dp"
-        android:paddingLeft="5dp" />
+        android:paddingLeft="3dp" />
     
     <TextView
         android:id="@+id/file_list_updated"
@@ -45,7 +45,7 @@
         android:layout_height="30dp"
         android:layout_toRightOf="@id/file_list_one_dot"
         android:layout_below="@+id/file_list_filename"
-        android:paddingLeft="5dp"
+        android:paddingLeft="3dp"
         android:paddingBottom="7dp"
         android:textColor="@color/file_list_second_row" />
     
