--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -17,7 +17,8 @@
         android:layout_height="30dp"
         android:layout_toRightOf="@id/file_list_thumbnail"
         android:paddingLeft="3dp"
-        android:paddingTop="7dp" />
+        android:paddingTop="7dp"
+        android:singleLine="false" />
     
     <TextView
         android:id="@+id/file_list_filesize"
