Solved memory leak (OOM error) in the Image Gallery Completely changed the way the gallery is created. There is still a bug when creating previews of large images (at least in my old Samsung Galaxy S... not in Nexus 5) It seems to be a bug when allocating a large Bitmap. (not memory leak)

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -77,6 +77,13 @@
         
       <item name="android:button">@drawable/btn_check_holo_light</item>
   </style>
+  
+    <style name="ProgressBarTheme.mega" parent="android:Widget.ProgressBar.Horizontal">
+      <item name="android:progressDrawable">@drawable/progress_horizontal_holo_light</item>
+      <item name="android:indeterminateDrawable">@drawable/progress_indeterminate_horizontal_holo_light</item>
+      <item name="android:minHeight">20dip</item>
+      <item name="android:maxHeight">20dip</item>
+  </style>
     
     <style name="login_activity" parent="@style/Theme.AppCompat.Light">
         <item name="android:windowNoTitle">true</item>
