--- a/res/layout/item_full_screen_image_viewer.xml
+++ b/res/layout/item_full_screen_image_viewer.xml
@@ -19,5 +19,11 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="30dp" />
     
+    <ProgressBar
+        android:id="@+id/full_screen_image_viewer_download_progress_bar"
+        style="@style/ProgressBarTheme.mega"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+		android:layout_centerInParent="true"/>
 
 </RelativeLayout>
