--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -85,42 +85,82 @@
             android:layout_height="wrap_content">
             
             <TableRow>
-	            <ImageButton
+<!-- 	            <ImageButton
 		            android:id="@+id/file_list_option_open"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/file_list_option_open"
+		            android:src="@drawable/ic_action_collections_collection"
 		            android:paddingLeft="30dp"
 		            android:paddingTop="10dp"
 		            android:background="@null" 
 		            android:layout_gravity="center_vertical"/>
-	        
+-->	        
+				<ImageButton
+		            android:id="@+id/file_list_option_download"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_menu_download"
+		            android:paddingLeft="5dp"
+		            android:paddingTop="10dp"
+		            android:background="@null"
+		            android:layout_gravity="center_vertical" />
+
 		        <ImageButton
 		            android:id="@+id/file_list_option_properties"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/file_list_option_properties"
-		            android:paddingLeft="30dp"
+		            android:src="@drawable/ic_menu_properties"
+		            android:paddingLeft="20dp"
 		            android:paddingTop="10dp"
 		            android:background="@null" 
 		            android:layout_gravity="center_vertical"/>
-	        
+		        
 		        <ImageButton
-		            android:id="@+id/file_list_option_download"
+		            android:id="@+id/file_list_option_rename"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/file_list_option_download"
-		            android:paddingLeft="30dp"
+		            android:src="@drawable/ic_menu_rename"
+		            android:paddingLeft="20dp"
 		            android:paddingTop="10dp"
-		            android:background="@null"
+		            android:background="@null" 
+		            android:layout_gravity="center_vertical"/>
+		        
+		        <ImageButton
+		            android:id="@+id/file_list_option_copy"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_menu_copy"
+		            android:paddingLeft="20dp"
+		            android:paddingTop="10dp"
+		            android:background="@null" 
+		            android:layout_gravity="center_vertical"/>
+		        
+		        <ImageButton
+		            android:id="@+id/file_list_option_move"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_menu_move"
+		            android:paddingLeft="20dp"
+		            android:paddingTop="10dp"
+		            android:background="@null" 
+		            android:layout_gravity="center_vertical"/>
+	            
+		        <ImageButton
+		            android:id="@+id/file_list_option_public_link"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_menu_download_link"
+		            android:paddingLeft="20dp"
+		            android:paddingTop="10dp"
+		            android:background="@null" 
 		            android:layout_gravity="center_vertical" />
 	        
 		        <ImageButton
 		            android:id="@+id/file_list_option_delete"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/file_list_option_delete"
-		            android:paddingLeft="30dp"
+		            android:src="@drawable/ic_menu_discard"
+		            android:paddingLeft="20dp"
 		            android:paddingTop="10dp"
 		            android:background="@null" 
 		            android:layout_gravity="center_vertical" />
