Move nodes functionality implemented

--- a/res/layout/item_file_grid.xml
+++ b/res/layout/item_file_grid.xml
@@ -106,49 +106,56 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_download"
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 
 		        <ImageView
 		            android:id="@+id/file_grid_option_properties1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_properties"
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_grid_option_rename1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_rename"
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_grid_option_copy1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_copy" 
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_grid_option_move1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_move" 
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 	            
 		        <ImageView
 		            android:id="@+id/file_grid_option_public_link1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_download_link" 
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical" 
+		            style="@style/dialogActionButton" />
 	        
 		        <ImageView
 		            android:id="@+id/file_grid_option_delete1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_discard" 
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 	        </TableRow>        
         </TableLayout>
     </RelativeLayout>
@@ -259,49 +266,56 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_download"
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 
 		        <ImageView
 		            android:id="@+id/file_grid_option_properties2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_properties" 
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_grid_option_rename2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_rename" 
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_grid_option_copy2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_copy" 
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_grid_option_move2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_move" 
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 	            
 		        <ImageView
 		            android:id="@+id/file_grid_option_public_link2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_download_link" 
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical" 
+		            style="@style/dialogActionButton" />
 	        
 		        <ImageView
 		            android:id="@+id/file_grid_option_delete2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_discard" 
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical" 
+		            style="@style/dialogActionButton" />
 	        </TableRow>        
         </TableLayout>
     </RelativeLayout>
