--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -100,49 +100,56 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_download"
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 
 		        <ImageView
 		            android:id="@+id/file_list_option_properties"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_properties"
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_list_option_rename"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_rename"
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_list_option_copy"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_copy"
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 		        
 		        <ImageView
 		            android:id="@+id/file_list_option_move"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_move"
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton" />
 	            
 		        <ImageView
 		            android:id="@+id/file_list_option_public_link"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_download_link"
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical" 
+		            style="@style/dialogActionButton" />
 	        
 		        <ImageView
 		            android:id="@+id/file_list_option_delete"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_menu_discard"
-		            android:layout_gravity="center_vertical" />
+		            android:layout_gravity="center_vertical" 
+		            style="@style/dialogActionButton" />
 	        </TableRow>        
         </TableLayout>
     </RelativeLayout>
