--- a/res/layout/activity_contact_properties.xml
+++ b/res/layout/activity_contact_properties.xml
@@ -28,7 +28,7 @@
           
      <com.mega.components.RoundedImageView 
          android:id="@+id/contact_properties_image"
-         android:layout_width="wrap_content"
+         android:layout_width="270dp"
          android:layout_height="270dp"
          android:layout_centerHorizontal="true"
          android:layout_below="@id/contact_properties_name"
@@ -112,7 +112,6 @@
 		             android:id="@+id/contact_properties_info_data_email"
 		             android:layout_width="wrap_content"
 		             android:layout_height="wrap_content"
-		             android:text="jra@mega.co.nz"
 		             android:textColor="@color/contact_properties_info_data"
 					 android:layout_gravity="center_vertical|left" 
 					 android:paddingLeft="4dp"
