--- a/res/layout/fragment_rubbishbingrid.xml
+++ b/res/layout/fragment_rubbishbingrid.xml
@@ -12,5 +12,21 @@
         android:dividerHeight="0dp"
 		android:divider="@null">
     </ListView>
+    
+    <ImageView
+	    android:id="@+id/rubbishbin_grid_empty_image"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_centerInParent="true" />
+    
+    <TextView
+	    android:id="@+id/rubbishbin_grid_empty_text"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:textColor="@color/text_secondary"
+	    android:textSize="16sp"
+	    android:layout_below="@id/rubbishbin_grid_empty_image"
+	    android:layout_marginTop="@dimen/standard_margin"
+	    android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
