--- a/res/layout/fragment_rubbishbinlist.xml
+++ b/res/layout/fragment_rubbishbinlist.xml
@@ -7,7 +7,24 @@
     <ListView
         android:id="@+id/rubbishbin_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:choiceMode="multipleChoice" >
     </ListView>
+    
+    <ImageView
+	    android:id="@+id/rubbishbin_list_empty_image"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_centerInParent="true" />
+    
+    <TextView
+	    android:id="@+id/rubbishbin_list_empty_text"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:textColor="@color/text_secondary"
+	    android:textSize="16sp"
+	    android:layout_below="@id/rubbishbin_list_empty_image"
+	    android:layout_marginTop="@dimen/standard_margin"
+	    android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
